Adding gpt integration

--- a/AIWorryJar/AIWorryJar.csproj
+++ b/AIWorryJar/AIWorryJar.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ChatGPT.Net" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
