--- a/AIWorryJar/appsettings.json
+++ b/AIWorryJar/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "OPENAI_API_KEY": "<sk-your-key-here>"
+  "OPENAI_API_KEY": "<sk-your-key-here>",
+  "OPENAI_PROMPT": "<your-prompt-here>"
 }
